--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
             android:theme="@style/LoginTextLayoutStyle">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -55,6 +56,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/login_pw"
                 android:ems="10"
                 android:inputType="textPassword"
                 android:shadowDy="3"
@@ -77,6 +79,8 @@
 
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/btn_login"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="48dp"
@@ -105,7 +109,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/textview"
+            android:id="@+id/btn_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
