--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,6 +26,7 @@
             android:theme="@style/LoginTextLayoutStyle">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signup_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -50,6 +51,8 @@
             android:theme="@style/LoginTextLayoutStyle">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signup_id"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -74,6 +77,7 @@
             android:theme="@style/LoginTextLayoutStyle">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signup_pw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -99,6 +103,7 @@
             android:theme="@style/LoginTextLayoutStyle">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/signup_pw2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -121,6 +126,7 @@
             android:clickable="true">
 
             <RelativeLayout
+                android:id="@+id/signup_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
