--- a/app/src/main/res/layout/item_recommend_restaurant.xml
+++ b/app/src/main/res/layout/item_recommend_restaurant.xml
@@ -11,10 +11,11 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/item_restaurant_profile_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:background="#263238" />
+          />
 
         <LinearLayout
             android:layout_width="match_parent"
